# scrub

./: README.md  package.json  pyproject.toml
ci/: release.py
scrub/: __init__.py  scrub.py
tests/: test_scrub.py
tests/snapshots/: snap_test_scrub.py
